--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,13 @@ select::-ms-expand {
 * {
     font-family: 'Roboto', serif;
 }
+
+.flex-col{
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-row{
+    display: flex;
+    flex-direction: row;
+}
